Fixed bug #5884 - Index update fails when adding or removing directories.